# cloud_cost_optimizer

./: .env.example  .gitignore  Dockerfile  ENHANCEMENTS.md  FUNCTIONALITIES.md  README.md  __init__.py  client.py  config.submission.yaml  config.yaml.example  docker-compose.e2e.yml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
prompts/: easy_v1.txt  hard_v1.txt  medium_v1.txt  v1.txt  v2.txt
scripts/: build_task.py  compare_models.py  compare_prompts.py  full_presubmit.ps1  generate_openapi_client.py  pre_submit_check.py  run_e2e_docker.ps1  run_llm_forward_demo.ps1  run_submission_profile.ps1
server/: Dockerfile  app.py  cloud_cost_environment.py
tasks/: easy.json  hard.json  medium.json  smoke_custom.json
tests/: mock_llm_server.py  test_env.py  test_inference.py  test_integration_roundtrip.py
